--- a/.golangci.yml
+++ b/.golangci.yml
@@ -50,3 +50,9 @@ linters:
     - prealloc
   fast: false
   disable-all: true
+
+issues:
+  exclude-rules:
+    - path: '(.+)_test\.go'
+      linters:
+        - dupl
